# Market_Prediction_Playground

./: .gitignore  .gitmodules  data_sandbox.py  data_scraping_sandbox.py  multi_th_yfinance.py  pdr_test.py  training_sandbox.py
20211116/: data_0618_20211116.csv  data_3914_20211116.csv  nasdaq_etf_screener_1637039504598.csv  nasdaq_screener_1637039483673.csv
20230928/: data_1921_20230928.csv
AssetOptimizationTool/: CMakeLists.txt  ReadMe.md
AssetOptimizationTool/doc/: sequence_diagram.puml
AssetOptimizationTool/interface/: asset_optimization_tool.h  types.h
AssetOptimizationTool/module/: CMakeLists.txt  asset_optimization_tool_impl.cpp  asset_optimization_tool_impl.h  module_factory.h  module_factory_impl.h
AssetOptimizationTool/module/_interfaces/: analyzer_interface.h  configuration_interface.h  data_interface.h  data_transformer_interface.h  module_factory_interface.h
AssetOptimizationTool/module/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h
AssetOptimizationTool/module/asset_mixer/: CMakeLists.txt  asset_mixer.h
AssetOptimizationTool/module/configuration/: CMakeLists.txt  configuration.cpp  configuration.h
AssetOptimizationTool/module/configurator/: CMakeLists.txt  configurator.h
AssetOptimizationTool/module/data/: CMakeLists.txt  data.cpp  data.h  data_transformer.cpp  data_transformer.h
AssetOptimizationTool/module/simulation_data_manager/: CMakeLists.txt  simulation_data_manager.h
AssetOptimizationTool/module/simulator/: CMakeLists.txt  simulator.h
AssetOptimizationTool/ut/: CMakeLists.txt
AssetOptimizationTool/ut/testcases/: configurations.h  test_analyzer.cpp  test_configuration.cpp  test_data.cpp  test_tool_integrated.cpp  test_tool_interface.cpp  test_tool_logic.cpp
AssetOptimizationTool/ut/testfiles/: config_example.json  data_example.tsv  data_wrong_delimitter.csv
cpp_efficient_frontier/: CMakeLists.txt  analysis_config_example.json  program.cpp  program.hpp  simulation_results.tsv
cpp_efficient_frontier/analysis/: CMakeLists.txt  analysis.cpp  analysis.h
cpp_efficient_frontier/calculations/: CMakeLists.txt  calculations.cpp  calculations.h  calculations.hpp
cpp_efficient_frontier/calculations/expected_returns/: CMakeLists.txt  expected_returns.cpp  expected_returns.h  expected_returns.hpp  expected_returns_strategy.h  expected_returns_strategy.hpp
cpp_efficient_frontier/data_manipulation/: CMakeLists.txt  data_manipulation.cpp  data_manipulation.h  data_manipulation.hpp
cpp_efficient_frontier/data_manipulation/date_line/: CMakeLists.txt  date_line.cpp  date_line.h
cpp_efficient_frontier/data_reading_sandbox/: CMakeLists.txt  data_reading_sandbox.cpp  data_reading_sandbox.hpp
cpp_efficient_frontier/testing/: CMakeLists.txt  test.cpp
python_data_collection/: collect_and_merge_data.sh  data_sandbox.py  data_scraping_sandbox.py  generate_new_data.sh  model_testing_sandbox.py  training_sandbox.py
statistics_experiments/: histograms.py
